--- a/notebook/EDA_Student_performance.ipynb
+++ b/notebook/EDA_Student_performance.ipynb
@@ -549,6 +549,16 @@
    "source": [
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Statistical insight**\n",
+    "1) In case of numerical data, the mean values for the three subjects are very close to each other - between 66 and 68.05\n",
+    "2) Similarly standard deviations are also close - between 14.6 and 15.19\n",
+    "3) While there is a minimum score 0 for math, for writing minimum is much higher = 10 and for reading myet higher = 17"
+   ]
   }
  ],
  "metadata": {
